--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="LG Psychotherapy, counselling in Dublin 12 , Ireland">
+    <meta name="keywords" content="LG Psychotherapy, Psychotherapy, counselling, cousellor, Dublin 12, Ireland">
+
+    <link rel="stylesheet" href="assests/css/style.css">
+    
+    <title>LG Psychotherapy</title>
 </head>
 <body>
     <h1>LG Psychotherapy</h1>
