Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,30 @@
     <meta name="keywords" content="LG Psychotherapy, Psychotherapy, counselling, cousellor, Dublin 12, Ireland">
 
     <link rel="stylesheet" href="assests/css/style.css">
-    
+
     <title>LG Psychotherapy</title>
 </head>
 <body>
-    <h1>LG Psychotherapy</h1>
+    <header>
+        Header Content
+    </header>
+    <section>
+        Hero Image
+    </section>
+    <section>
+        About
+    </section>
+    <section>
+        Services
+    </section>
+    <section>
+        Testimonials
+    </section>
+    <section>
+        Contact
+    </section>
+    <footer>
+        Social media icons
+    </footer>
 </body>
 </html>
