Add google fonts and remove any default margins, padding and borders

--- a/index.html
+++ b/index.html
@@ -13,8 +13,31 @@
 </head>
 <body>
     <header>
-        Header Content
+        <a href="index.html">
+            <logo></logo>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#services">Services</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+                <li>
+                    <a href="#make-a-booking">Make a Booking</a>
+                </li>
+
+            </ul>
+        </nav>
     </header>
+
     <section>
         Hero Image
     </section>
