Add style to headings and logo

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <logo></logo>
-        </a>
+
         <nav>
+        <div>
+            <a href="index.html"></a>
+       
+           <h1 id="logo"> <img src="assests/images/logo-lgpsychotherapy.png" alt="logo-lgpsychotherapy"> </h1>
+            </a> 
+            </div>
+        
             <ul>
                 <li>
                     <a href="index.html">Home</a>
