Add hero image and style it

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     </header>
 
     <section>
-        Hero Image
+        <div id="hero-image">
+            
     </section>
     <section>
         About
