Add cover text to hero image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
 
     <section>
         <div id="hero-image">
-            
+            <div id="cover-text">
+                Welcome to
+                <h2>LG Psychotherapy</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, 
+                    dolor purus euismod dolor, et laoreet diam libero et urna</p>
+                    
+            </div>
+          <!--<button><a href="#services">Services</a></button>-->  
+        </div>
+
     </section>
     <section>
         About
