Add section id to link to navigation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section>
         <div id="hero-image">
             <div id="cover-text">
-                Welcome to
+               <p> Welcome to </p>
                 <h2>LG Psychotherapy</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, 
                     dolor purus euismod dolor, et laoreet diam libero et urna</p>
@@ -58,16 +58,20 @@
         </div>
 
     </section>
-    <section>
-        About
+    <section id="about">
+
+        <h2>About</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, dolor purus euismod dolor, et laoreet diam libero et urna. Nulla semper purus ex, et accumsan ipsum laoreet eu. Vivamus tortor nisl, tincidunt sit amet mauris non, dapibus condimentum dui. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fringilla, ipsum at ultrices porta, neque lacus facilisis dolor, a ultricies metus ligula in leo. 
+            Sed molestie enim et tellus sagittis lacinia.</p>
+        
     </section>
-    <section>
+    <section id="services">
         Services
     </section>
     <section>
         Testimonials
     </section>
-    <section>
+    <section id="contact">
         Contact
     </section>
     <footer>
