--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
             <ul id="menu">
                 <li>
-                    <a href="#make-a-booking">Make a Booking</a>
+                    <a href="make-a-booking.html">Make a Booking</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
