--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     </section>
 
-    <section id="#about">
+    <section id="about">
         <div id="about-container">
 
         <div class="text-container">
@@ -81,20 +81,29 @@
         
     </section>
 
-    <section id="#services">
+    <section id="services">
 
     <div id="services-container">
-        <h2>Services</h2>
+        
         <div class="text-container">
+            <h2>Services</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, dolor purus euismod dolor, et laoreet diam libero et urna. Nulla semper purus ex, et accumsan ipsum laoreet eu. Vivamus tortor nisl, tincidunt sit amet mauris non, dapibus condimentum dui. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fringilla, ipsum at ultrices porta, neque lacus facilisis dolor, a ultricies metus ligula in leo. 
                 Sed molestie enim et tellus sagittis lacinia.</p> </div>
+
+            <div id="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VP-5GNJSw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+                </div>
     </section>
     <section>
 
        <h2>Testimonials</h2>
+
     </section>
 
-    <section id="#contact">
+    <section id="contact">
+        Email lg_psychotherapy@hotmail.com
+        Phone number: 0858331481
 
         <h2>Contact</h2>
     </section>
