--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
         <div class="text-container">
             <h2>About</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, dolor purus euismod dolor, et laoreet diam libero et urna. Nulla semper purus ex, et accumsan ipsum laoreet eu. Vivamus tortor nisl, tincidunt sit amet mauris non, dapibus condimentum dui. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fringilla, ipsum at ultrices porta, neque lacus facilisis dolor, a ultricies metus ligula in leo. 
-            Sed molestie enim et tellus sagittis lacinia.</p> </div>
+            Sed molestie enim et tellus sagittis lacinia.</p> 
+            <div class="button1"><a href="#contact">Contact</a></div>
+        
+        </div>
 
         
             <div id="img-container"> <img src="assests/images/test-photo.jpg" alt=""></div>
@@ -88,10 +91,12 @@
         <div class="text-container">
             <h2>Services</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, dolor purus euismod dolor, et laoreet diam libero et urna. Nulla semper purus ex, et accumsan ipsum laoreet eu. Vivamus tortor nisl, tincidunt sit amet mauris non, dapibus condimentum dui. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fringilla, ipsum at ultrices porta, neque lacus facilisis dolor, a ultricies metus ligula in leo. 
-                Sed molestie enim et tellus sagittis lacinia.</p> </div>
+                Sed molestie enim et tellus sagittis lacinia.</p> 
+            <div class="button2"><a href="make-a-booking.html">Make a Booking</a></div>
+            </div>
 
             <div id="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VP-5GNJSw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/VP-5GNJSw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
                 </div>
     </section>
@@ -102,13 +107,19 @@
     </section>
 
     <section id="contact">
+        <div id="contact-container">
         Email lg_psychotherapy@hotmail.com
         Phone number: 0858331481
 
         <h2>Contact</h2>
+    </div>
     </section>
+
     <footer>
+
+    <div id="footer-section">
         Social media icons
+    </div>
     </footer>
 </body>
 </html>
