Add boxes for testimonial section

--- a/index.html
+++ b/index.html
@@ -101,17 +101,45 @@
                 </div>
     </section>
     <section>
+        <div id="testimonials-section">
 
        <h2>Testimonials</h2>
+       <div class="testimonial-box">
+           <h3>Claire</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+               Nullam pulvinar lacinia enim at vehicula.</p>
+
+       </div>
+       <div class="testimonial-box">
+        <h3>Moya</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Nullam pulvinar lacinia enim at vehicula.</p>
+
+    </div>
+    <div class="testimonial-box">
+        <h3>Lauren</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Nullam pulvinar lacinia enim at vehicula.</p>
+
+    </div>
+    <div class="testimonial-box">
+        <h3>Jeff</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Nullam pulvinar lacinia enim at vehicula.</p>
+
+    </div>
+        </div>
 
     </section>
 
     <section id="contact">
         <div id="contact-container">
-        Email lg_psychotherapy@hotmail.com
-        Phone number: 0858331481
+        
 
         <h2>Contact</h2>
+
+        Email lg_psychotherapy@hotmail.com
+        Phone number: 0858331481
     </div>
     </section>
 
