Add font awesome icons to footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="LG Psychotherapy, counselling in Dublin 12 , Ireland">
     <meta name="keywords" content="LG Psychotherapy, Psychotherapy, counselling, cousellor, Dublin 12, Ireland">
 
+    <script src="https://kit.fontawesome.com/22c64c76c1.js" crossorigin="anonymous"></script>
+
+
     <link rel="stylesheet" href="assests/css/style.css">
 
     <title>LG Psychotherapy</title>
