Add more structure and style to testimonials and contact section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
 <!--Services Video-->
             <div id="video-container">
-                <h3>Take a look around our Therapy Room</h3>
+                
                 <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/VP-5GNJSw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
                 </div>
@@ -125,27 +125,26 @@
    
         <div id="testimonial-section">
 
-       <h2>Testimonials</h2>
        <div class="testimonial-box">
-           <h3>Claire</h3>
+           <div class="testimonial-box-header"><h3>Claire</h3></div>
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                Nullam pulvinar lacinia enim at vehicula.</p>
 
        </div>
        <div class="testimonial-box">
-        <h3>Moya</h3>
+        <div class="testimonial-box-header"><h3>Moya</h3></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Nullam pulvinar lacinia enim at vehicula.</p>
 
     </div>
     <div class="testimonial-box">
-        <h3>Lauren</h3>
+        <div class="testimonial-box-header"><h3>Lauren</h3></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Nullam pulvinar lacinia enim at vehicula.</p>
 
     </div>
     <div class="testimonial-box">
-        <h3>Jeff</h3>
+        <div class="testimonial-box-header"><h3>Jeff</h3></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Nullam pulvinar lacinia enim at vehicula.</p>
 
@@ -160,6 +159,8 @@
         <div id="contact-container">
         
             <div class="contact-information">
+
+                <div class="contact-information-text">
 
                 <h2>Contact Information</h2>
                 <p>
@@ -179,6 +180,7 @@
                 <hr>
                 Opening Hours Mon - Friday 9-7 Sat 9-2
             </p>
+        </div>
 
             <div id="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.4754244157843!2d-6.323384084616133!3d53.316840384622736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c871e91235d%3A0xd39f58ae80b7845d!2s131%20Cromwellsfort%20Rd%2C%20Walkinstown%2C%20Dublin%2012%2C%20D12%20P796!5e0!3m2!1sen!2sie!4v1630921181969!5m2!1sen!2sie" width="400
@@ -189,7 +191,7 @@
         <div class="form-container">
 
             <div class="form-contact">
-                <h4>Fill out our form and we will get in touch as soon as possible</h4>
+                <h4> Fill out our form and we will get in touch as soon as possible </h4>
             <form action="mailto:deecoopermedia@gmail.com" method="POST"> <!--w3 schools-->
                 <label for="name">Name</label>
                 <input type="text" id="Name" name="name" placeholder="name" required>
@@ -207,7 +209,7 @@
 
         <textarea id="comments" id="comments" rows="10" cols="45" name="comments"  placeholder="Enter any comments or questions here"></textarea>  
         <br>
-        <button><input type="submit" class="submit-button" value="Send!"></button>
+        <input type="submit" class="submit-button" value="Send!">
 
             </div>
 
