Add copyright text to footer

--- a/make-a-booking.html
+++ b/make-a-booking.html
@@ -54,6 +54,7 @@
         </ul>
     </nav>
 </header>
+<div id="booking-form">
     <h1>Make a Booking</h1>
     <form action="mailto:deecoopermedia@gmail.com" method="POST"> <!--w3 schools-->
         <label for="name">Name</label>
@@ -103,7 +104,7 @@
     
     </form>
     
-    </section>
+</div>
     <footer>
 
    
