--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
                     I look forward to hearing from you.
                 </p>
                 <br>
-                Email lg_psychotherapy@hotmail.com
+                Email: lg_psychotherapy@hotmail.com
                 <br>
                 <hr>
                 Phone number: 0851417130 
                 <br>
                 <hr>
-                Address: 131 Cromwellsfort Road, Walkinstown, Dublin 12
+                Address: 130 Cromwellsfort Road, Walkinstown, Dublin 12, D12 XV04
                 <br>
                 <hr>
                 Opening Hours Mon - Friday 9-7 Sat 9-2
@@ -184,16 +184,16 @@
         </div>
 
             <div id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.4754244157843!2d-6.323384084616133!3d53.316840384622736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c871e91235d%3A0xd39f58ae80b7845d!2s131%20Cromwellsfort%20Rd%2C%20Walkinstown%2C%20Dublin%2012%2C%20D12%20P796!5e0!3m2!1sen!2sie!4v1630921181969!5m2!1sen!2sie" width="400
-                
-                " height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.501302561411!2d-6.322914484616147!3d53.31637698465745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c8723a82dd7%3A0xcd7842bd168458c4!2s130%20Cromwellsfort%20Rd%2C%20Walkinstown%2C%20Dublin%2C%20D12%20XV04!5e0!3m2!1sen!2sie!4v1631091654782!5m2!1sen!2sie" 
+                width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="form-container">
 
             <div class="form-contact">
                 <h4> Fill out our form and we will get in touch as soon as possible </h4>
-            <form action="mailto:deecoopermedia@gmail.com" method="POST"> <!--w3 schools-->
+                <form method="POST" action="https://formdump.codeinstitute.net/">
+             <!--w3 schools-->
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="name" required>
                 <br>
@@ -208,9 +208,9 @@
                 <label for="comments">Comments or questions</label>
                 <br>
 
-        <textarea id="comments" id="comments" rows="10" cols="45" name="comments"  placeholder="Enter any comments or questions here"></textarea>  
+        <textarea id="comments" id="comments" rows="10" cols="55" name="comments"  placeholder="Enter any comments or questions here"></textarea>  
         <br>
-        <input type="submit" class="submit-button" value="Send!">
+        <input type="submit" class="submit-button" value="Submit">
 
             </form>
 
