--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <!--Services Video-->
             <div id="video-container">
                 
-                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/VP-5GNJSw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="video" src="https://www.youtube.com/embed/VP-5GNJSw4g" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
                 </div>
     </section>
@@ -184,8 +184,7 @@
         </div>
 
             <div id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.501302561411!2d-6.322914484616147!3d53.31637698465745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c8723a82dd7%3A0xcd7842bd168458c4!2s130%20Cromwellsfort%20Rd%2C%20Walkinstown%2C%20Dublin%2C%20D12%20XV04!5e0!3m2!1sen!2sie!4v1631091654782!5m2!1sen!2sie" 
-                width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.501302561411!2d-6.322914484616147!3d53.31637698465745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c8723a82dd7%3A0xcd7842bd168458c4!2s130%20Cromwellsfort%20Rd%2C%20Walkinstown%2C%20Dublin%2C%20D12%20XV04!5e0!3m2!1sen!2sie!4v1631091654782!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="form-container">
@@ -208,7 +207,7 @@
                 <label for="comments">Comments or questions</label>
                 <br>
 
-        <textarea id="comments" id="comments" rows="10" cols="55" name="comments"  placeholder="Enter any comments or questions here"></textarea>  
+        <textarea id="comments" name="comments"  placeholder="Enter any comments or questions here"></textarea>  
         <br>
         <input type="submit" class="submit-button" value="Submit">
 
@@ -241,7 +240,7 @@
     </ul>
 
 
-    <h4>LG Psychotherapy copyright 2021. All rights reserved </h4>
+    <p>LG Psychotherapy copyright 2021. All rights reserved. Website Design by <a href="https://github.com/deecooper" target="_blank" aria-label="Link to Dee Cooepers Github profile">Dee Cooper</a> </p>
     </footer>
 
     <!--Font Awesome link-->
