Remove placeholder text and add text to hero image, about and testimonials

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             <div id="cover-text">
                <p> Welcome to </p>
                 <h2>LG Psychotherapy</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, 
-                    dolor purus euismod dolor, et laoreet diam libero et urna</p>
+                <p>Counselling & Psychotherapy is suitable for anyone looking to explore & delve deeper into their knowledge of self. 
+                    At various stages of our life, we may need assistance or support in exploring personal issues especially in times of change or crisis. 
+                    Through a counselling session an individual may gain greater insight and understanding of any deeper issues involved</p>
 
                    <div class="hero-button"><a href="#services">Services</a></div>
                     
@@ -83,8 +84,11 @@
 <!--About text-->
         <div class="text-container">
             <h2>About</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, dolor purus euismod dolor, et laoreet diam libero et urna. Nulla semper purus ex, et accumsan ipsum laoreet eu. Vivamus tortor nisl, tincidunt sit amet mauris non, dapibus condimentum dui. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fringilla, ipsum at ultrices porta, neque lacus facilisis dolor, a ultricies metus ligula in leo. 
-            Sed molestie enim et tellus sagittis lacinia.</p> 
+        <p>Lorna holds a BSc (Hons) in Counselling & Psychotherapy. My journey to becoming a Psychotherapist began when I returned to college as a mature student.
+            Having previously worked in a customer service based role I developed a greater interest in human psychology. Growing up I was conscious of my own anxieties and low self-esteem issues. 
+            Through study and personal development I have realised the importance of growth and self-awareness and the ability to recognise when a little extra support is needed.
+
+        </p> 
 
             <div class="button1"><a href="#contact">Contact</a></div>
         
@@ -129,26 +133,27 @@
 
        <div class="testimonial-box">
            <div class="testimonial-box-header"><h3>Claire</h3></div>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-               Nullam pulvinar lacinia enim at vehicula.</p>
+           <p>"I was feeling very low and decided to reach out. I contacted Lorna and booked in for a counselling session. 
+               She immedietely made me feel at ease. After a few sessions I felt like I could cope with my issues a lot better." </p>
 
        </div>
        <div class="testimonial-box">
         <div class="testimonial-box-header"><h3>Moya</h3></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Nullam pulvinar lacinia enim at vehicula.</p>
+        <p> "After losing my job I felt like everything was falling apart. It was my first time ever speaking to a counsellor about my problems.
+            I felt better knowing someone was listening to me and helping me make future descions."
+             </p>
 
     </div>
     <div class="testimonial-box">
         <div class="testimonial-box-header"><h3>Lauren</h3></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Nullam pulvinar lacinia enim at vehicula.</p>
+        <p>"Lorna has helped me immensely to overcome my anxieties. I enjoy my counselling sessions with lorna.
+            I feel like my head is clear each time I finish a therapy session."
+        </p>
 
     </div>
     <div class="testimonial-box">
         <div class="testimonial-box-header"><h3>Jeff</h3></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Nullam pulvinar lacinia enim at vehicula.</p>
+        <p>"I highly recommend Lorna. She wont make you feel like you are being judged or discouraged in anyway. She is a great listener and is very knowledgable in her field."</p>
 
     </div>
         </div>
