Add media queries for 600 max-width and480 max-width

--- a/index.html
+++ b/index.html
@@ -113,8 +113,14 @@
 
         <div class="text-container">
             <h2>Services</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacinia enim at vehicula. Donec eleifend, nibh et bibendum malesuada, dolor purus euismod dolor, et laoreet diam libero et urna. Nulla semper purus ex, et accumsan ipsum laoreet eu. Vivamus tortor nisl, tincidunt sit amet mauris non, dapibus condimentum dui. Aliquam erat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fringilla, ipsum at ultrices porta, neque lacus facilisis dolor, a ultricies metus ligula in leo. 
-                Sed molestie enim et tellus sagittis lacinia.</p> 
+            <p>Lorna uses an integrative approach in her therapy focusing mainly on a Person-Centered approach which allows her clients the space to be open and free to talk about any concerns arising in a non-judgemental environment. 
+                She also uses Cognitive-Behavioural Therapy when needed to give her clients that extra awareness of how our thinking patterns body reactions and physical sensations are all linked together. 
+                Lorna has previous experience working with anxiety, low self-esteem & trauma.
+                 
+                 
+                -Lorna offers a free initial 15-minute consultation to have a chat with her potential clients and see if they are a good match.
+                -Follow-up appointments are approx €50-€60. This fee is negotiable taking into consideration the individuals’ circumstances.
+                </p> 
 
             <div class="button2"><a href="make-a-booking.html">Make a Booking</a></div>
             </div>
