Add new video to services section

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 <!--Services Video-->
             <div id="video-container">
                 
-                <iframe id="video" src="https://www.youtube.com/embed/VP-5GNJSw4g" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="video" src="https://www.youtube.com/embed/uQzf6awpVAs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" aria-label="video of Lorna Gavins counselling room"allowfullscreen> Sorry your browser doesnt support embedded videos</iframe>
+               
             </div>
                 </div>
     </section>
@@ -199,7 +200,10 @@
         </div>
 
             <div id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.501302561411!2d-6.322914484616147!3d53.31637698465745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c8723a82dd7%3A0xcd7842bd168458c4!2s130%20Cromwellsfort%20Rd%2C%20Walkinstown%2C%20Dublin%2C%20D12%20XV04!5e0!3m2!1sen!2sie!4v1631091654782!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2383.501302561411!2d-6.
+                322914484616147!3d53.31637698465745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
+                1s0x48670c8723a82dd7%3A0xcd7842bd168458c4!2s130%20Cromwellsfort%20Rd%2C%20Walkin
+                stown%2C%20Dublin%2C%20D12%20XV04!5e0!3m2!1sen!2sie!4v1631091654782!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="form-container">
@@ -253,10 +257,6 @@
             <a href="https://twitter.com/PsychotherapyLg" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
         </li>
     </ul>
-
-
-    <p>LG Psychotherapy copyright 2021. All rights reserved. Website Design by <a href="https://github.com/deecooper" target="_blank" aria-label="Link to Dee Cooepers Github profile">Dee Cooper</a> </p>
-    </footer>
 
     <!--Font Awesome link-->
     <script src="https://kit.fontawesome.com/22c64c76c1.js" crossorigin="anonymous"></script>
