Add in h1 and fix grammer errors in testimonial section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!--Cover text on Hero Image-->
             <div id="cover-text">
                <p> Welcome to </p>
-                <h2>LG Psychotherapy</h2>
+                <h1>LG Psychotherapy</h1>
                 <p>Counselling & Psychotherapy is suitable for anyone looking to explore & delve deeper into their knowledge of self. 
                     At various stages of our life, we may need assistance or support in exploring personal issues especially in times of change or crisis. 
                     Through a counselling session an individual may gain greater insight and understanding of any deeper issues involved</p>
@@ -87,9 +87,11 @@
 <!--About text-->
         <div class="text-container">
             <h2>About</h2>
-        <p>Lorna holds a BSc (Hons) in Counselling & Psychotherapy. My journey to becoming a Psychotherapist began when I returned to college as a mature student.
+        <p>Lorna Gavin holds a BSc (Hons) in Counselling & Psychotherapy. Lorna is a preacreditted member of the IACP.
+            <p>
+            "My journey to becoming a Psychotherapist began when I returned to college as a mature student.
             Having previously worked in a customer service based role I developed a greater interest in human psychology. Growing up I was conscious of my own anxieties and low self-esteem issues. 
-            Through study and personal development I have realised the importance of growth and self-awareness and the ability to recognise when a little extra support is needed.
+            Through study and personal development I have realised the importance of growth and self-awareness and the ability to recognise when a little extra support is needed."</p>
 
         </p> 
 
@@ -120,7 +122,7 @@
                Lorna offers a free initial 15-minute consultation to have a chat with potential clients and see if we are a good match.
                 Follow up appointments are €50-€60. This fee is negotiable taking into consideration the individual’s circumstances. </p> 
                 <p>
-                    Take a look around our couselling room.
+                    Take a look around our couselling room in the video provided.
                 </p>
                 <div class="button2"><a href="make-a-booking.html">Make a Booking</a></div>
 
@@ -146,26 +148,26 @@
        <div class="testimonial-box">
            <div class="testimonial-box-header"><h3>Claire</h3></div>
            <p>"I was feeling very low and decided to reach out. I contacted Lorna and booked in for a counselling session. 
-               She immedietely made me feel at ease. After a few sessions I felt like I could cope with my issues a lot better." </p>
+               She immediately made me feel at ease. After a few sessions, I felt like I could cope with my issues a lot better." </p>
 
        </div>
        <div class="testimonial-box">
         <div class="testimonial-box-header"><h3>Moya</h3></div>
-        <p> "After losing my job I felt like everything was falling apart. It was my first time ever speaking to a counsellor about my problems.
-            I felt better knowing someone was listening to me and helping me make future descions."
+        <p> "After losing my job I felt like everything was falling apart. It was my first time speaking to a counsellor about my problems.
+            I felt better knowing someone was listening to me and helping me make future decisions."
              </p>
 
     </div>
     <div class="testimonial-box">
         <div class="testimonial-box-header"><h3>Lauren</h3></div>
-        <p>"Lorna has helped me immensely to overcome my anxieties. I enjoy my counselling sessions with lorna.
+        <p>"Lorna has helped me immensely to overcome my anxieties. I enjoy my counselling sessions with Lorna.
             I feel like my head is clear each time I finish a therapy session."
         </p>
 
     </div>
     <div class="testimonial-box">
         <div class="testimonial-box-header"><h3>Jeff</h3></div>
-        <p>"I highly recommend Lorna. She wont make you feel like you are being judged or discouraged in anyway. She is a great listener and is very knowledgable in her field."</p>
+        <p>"I highly recommend Lorna. She won't make you feel like you are being judged or discouraged in anyway. She is a great listener and is very knowledgeable in her field."</p>
 
     </div>
         </div>
