Change background overlay for imagery

--- a/make-a-booking.html
+++ b/make-a-booking.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <!--head-->
 <head>
+    <!--Meta Tags-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +21,7 @@
 <body>
     <!--logo-->
 <header id="container-header">
-    <div id="logo_holder">
+    <div id="logo-holder">
         <a href="index.html">
        <img src="assests/images/logo-lgpsychotherapy.png" alt="logo-lgpsychotherapy"> 
         </a>
@@ -28,7 +29,7 @@
 
 
     <!--navigation-->
-    <nav id="menu_holder">
+    <nav id="menu-holder">
         <ul id="menu">
 
             <li>
