--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--head-->
+    <!--Head-->
 <head>
+    <!--Meta Tags-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,7 @@
 <body>
     <!--logo-->
 <header id="container-header">
-    <div id="logo_holder">
+    <div id="logo-holder">
         <a href="index.html">
        <img src="assests/images/logo-lgpsychotherapy.png" alt="logo-lgpsychotherapy"> 
         </a>
@@ -30,7 +31,7 @@
 
 
     <!--navigation-->
-    <nav id="menu_holder">
+    <nav id="menu-holder">
         <ul id="menu">
 
             <li>
